; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_route.c_print_route.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_route.c_print_route.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.route_ipv4 = type { i32 }
%struct.gc_arena = type { i32 }

@RT_DEFINED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.route_ipv4*, i32)* @print_route to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_route(%struct.route_ipv4* %0, i32 %1) #0 {
  %3 = alloca %struct.route_ipv4*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.gc_arena, align 4
  store %struct.route_ipv4* %0, %struct.route_ipv4** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call i32 (...) @gc_new()
  %7 = getelementptr inbounds %struct.gc_arena, %struct.gc_arena* %5, i32 0, i32 0
  store i32 %6, i32* %7, align 4
  %8 = load %struct.route_ipv4*, %struct.route_ipv4** %3, align 8
  %9 = getelementptr inbounds %struct.route_ipv4, %struct.route_ipv4* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @RT_DEFINED, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %2
  %15 = load i32, i32* %4, align 4
  %16 = load %struct.route_ipv4*, %struct.route_ipv4** %3, align 8
  %17 = call i32 @route_string(%struct.route_ipv4* %16, %struct.gc_arena* %5)
  %18 = call i32 @msg(i32 %15, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %17)
  br label %19

19:                                               ; preds = %14, %2
  %20 = call i32 @gc_free(%struct.gc_arena* %5)
  ret void
}

declare dso_local i32 @gc_new(...) #1

declare dso_local i32 @msg(i32, i8*, i32) #1

declare dso_local i32 @route_string(%struct.route_ipv4*, %struct.gc_arena*) #1

declare dso_local i32 @gc_free(%struct.gc_arena*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
